[package]
name = "pcloud_tools"
version = "0.1.0"
authors = ["cossonleo <cossonleo@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
surf = "2.0"
tide = "0.14"
serde = "1.0"
async-trait = "0.1"
parallel-stream = "2.1"
smol = "1.2"
